AG-8893 fix log search icons
Merge in EXTENSIONS/browser-extension from fix/AG-8893 to feature/AG-2737

Squashed commit of the following:

commit 16d5d168ee4a96637c6ea6d21993d50f25fa9922
Merge: f09e8443b 0d7f87a60
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Mon Jul 5 19:36:31 2021 +0300

    Merge branch 'feature/AG-2737' into fix/AG-8893

commit f09e8443bb3db6fc625b234a058544e5449054c2
Merge: 70b32cee2 8c2de193d
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Mon Jul 5 12:06:22 2021 +0300

    Merge branch 'feature/AG-2737' into fix/AG-8893

commit 70b32cee221ddf53be611e865294c202579a8856
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Mon Jul 5 11:57:22 2021 +0300

    focus search inputs after search cancelling

commit a5d054063f5eeb7a48518c6c30e5eb3036763873
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Fri Jul 2 19:40:05 2021 +0300

    fix dark theme magnifying icon color

commit aece07709acf181cc46b052955728d4310fa71fb
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Fri Jul 2 19:09:56 2021 +0300

    fix log search icons

--- a/Extension/src/pages/common/styles/icons.pcss
+++ b/Extension/src/pages/common/styles/icons.pcss
@@ -55,7 +55,7 @@
         color: var(--gray400);
 
         @media (prefers-color-scheme: dark) {
-            color: var(--white);
+            color: var(--gray700);
         }
     }
 
@@ -135,7 +135,7 @@
         }
 
         &--magnifying {
-            color: var(--white);
+            color: var(--gray700);
         }
 
         &--extend {
