--- a/Extension/src/pages/filtering-log/components/Filters/EventsSearch/events-search.pcss
+++ b/Extension/src/pages/filtering-log/components/Filters/EventsSearch/events-search.pcss
@@ -12,7 +12,7 @@
         border: none;
         width: 100%;
         height: 32px;
-        padding: 0 25px 0 30px;
+        padding: 0 25px 0 34px;
         background-color: transparent;
 
         @media (prefers-color-scheme: dark) {
@@ -37,7 +37,9 @@
         background-color: transparent;
         cursor: pointer;
         position: absolute;
-        right: 0;
+        left: 0;
+        padding-left: 4px;
+        top: calc(50% - 9px);
 
         &:focus {
             outline: none;
